i dont know bro

--- a/Datalager/appsettings.json
+++ b/Datalager/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "CarPool": "Server=(localdb)\\mssqllocaldb;Database=Secondhandkläder;Trusted_Connection=True;"
+    "Cipers": "Server=(localdb)\\mssqllocaldb;Database=Cipers;Trusted_Connection=True;"
   }
 }
