--- a/Försök3/Försök3.csproj
+++ b/Försök3/Försök3.csproj
@@ -8,8 +8,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="EmptyPicture.png" />
+    <None Remove="RödTröja.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Affärslager\Affärslager.csproj" />
     <ProjectReference Include="..\Entiteter\Entiteter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="EmptyPicture.png" />
+    <Resource Include="RödTröja.png" />
   </ItemGroup>
 
 </Project>
